[package]
name = "egui_gl_glfw"
version = "0.1.1"
authors = [
    "Michael H. Phillips <mrclean71774@gmail.com>",
    "cohaereo <lucasteal@protonmail.com>",
]
edition = "2021"
description = "OpenGL backend for egui using GLFW"
homepage = "https://github.com/mrclean71774/egui_gl_glfw"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mrclean71774/egui_gl_glfw"
categories = ["gui", "graphics"]
keywords = ["glfw", "opengl", "egui", "gui", "gamedev"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
gl = { version = "0.14" }
glfw = { version = "0.55", default-features = false }
egui = { version = "0.27" }

[dependencies.clipboard]
package = "cli-clipboard"
version = "0.4"
optional = true

[features]
default = ["clipboard"]
wayland = ["glfw/glfw-sys", "glfw/wayland"]
rwh-06 = ["glfw/raw-window-handle-v0-6"]
