[package]
name = "egui_gl_glfw"
version = "0.1.3"
authors = [
    "Michael H. Phillips <mrclean71774@gmail.com>",
    "cohaereo <lucasteal@protonmail.com>",
]
edition = "2021"
description = "OpenGL backend for egui using GLFW"
homepage = "https://github.com/mrclean71774/egui_gl_glfw"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mrclean71774/egui_gl_glfw"
categories = ["gui", "graphics"]
keywords = ["glfw", "opengl", "egui", "gui", "gamedev"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
gl = { version = "0.14" }
glfw = { version = "0.57.0", default-features = false }
egui = { version = "0.27.2" }

[dependencies.clipboard]
package = "cli-clipboard"
version = "0.4"
optional = true

[features]
default = ["clipboard", "rwh-06"]
clipboard = ["dep:clipboard"]
glfw-sys = ["glfw/glfw-sys"]
wayland = ["glfw-sys", "glfw/wayland"]
rwh-05 = ["glfw/raw-window-handle-v0-5"]
rwh-06 = ["glfw/raw-window-handle-v0-6"]
