[package]
name = "egui_gl_glfw"
version = "0.1.13"
authors = [
  "Michael H. Phillips <mrclean71774@gmail.com>",
  "cohaereo <lucasteal@protonmail.com>",
]
edition = "2021"
description = "OpenGL backend for egui using GLFW"
homepage = "https://github.com/mrclean71774/egui_gl_glfw"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mrclean71774/egui_gl_glfw"
categories = ["gui", "graphics"]
keywords = ["glfw", "opengl", "egui", "gui", "gamedev"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
gl = { version = "0.14" }
glfw = { version = "0.59.0", default-features = false }
egui = { version = "0.31.1", default-features = false }

[dependencies.clipboard]
package = "arboard"
version = "3.6"
optional = true

[features]
default = [
  "clipboard",
  "glfw-sys",
  "glfw-raw-window-handle-v0-6",
  "egui-default_fonts",
]
clipboard = ["dep:clipboard"]

# arboard features
arboard-wayland-data-control = ["clipboard/wayland-data-control"]

# glfw features
glfw-default = ["glfw/default"]
glfw-all = ["glfw/all"]
glfw-with-window-handle-v0-5 = ["glfw/with-window-handle-v0-5"]
glfw-wayland = ["glfw/wayland"]
glfw-sys = ["glfw/glfw-sys"]
glfw-raw-window-handle-v0-5 = ["glfw/raw-window-handle-v0-5"]
glfw-raw-window-handle-v0-6 = ["glfw/raw-window-handle-v0-6"]
glfw-serde = ["glfw/serde"]

# egui features
# egui-accesskit = ["egui/accesskit"] TODO: needs integration support
egui-bytemuck = ["egui/bytemuck"]
egui-callstack = ["egui/callstack"]
egui-cint = ["egui/cint"]
egui-color-hex = ["egui/color-hex"]
egui-deadlock_detection = ["egui/deadlock_detection"]
egui-default_fonts = ["egui/default_fonts"]
egui-log = ["egui/log"]
egui-mint = ["egui/mint"]
egui-persistence = ["egui/persistence"]
egui-rayon = ["egui/rayon"]
egui-serde = ["egui/serde"]

[[example]]
name = "demo"
path = "examples/demo/main.rs"
required-features = ["egui-default_fonts"]
